fixing some issues and working on mobile menu

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18117,6 +18117,7 @@ a:focus h3 {
 }
 .top_left ul.helpmenu {
   padding-left: 0px;
+  white-space: nowrap;
 }
 
 .top_right {
