--- a/public/sass/sass-modules/master_page.scss
+++ b/public/sass/sass-modules/master_page.scss
@@ -113,6 +113,7 @@ a:focus {
 
 	ul.helpmenu{
 		padding-left: 0px;
+		white-space: nowrap;
 	}
 }
 
